traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:15: error: Missing closing brace `}' assumed here
}
^